--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,16 @@
     "plugin:import/typescript"
   ],
   "rules": {
-    "import/extensions": ["error", { "ts": "never"}]
+    "import/extensions": ["error", { "ts": "never" }],
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ]
   }
 }
